src/tests/routes/me/tokens/snapshots/integration__routes__me__tokens__create__create_token_with_expiry_date-2.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: response.json()
---
{
  "api_token": {
    "crate_scopes": null,
    "created_at": "[datetime]",
    "endpoint_scopes": null,
    "expired_at": "2024-12-24T07:34:56Z",
    "id": "[id]",
    "last_used_at": "[datetime]",
    "name": "bar",
    "token": "[token]"
  }
}
