src/tests/routes/me/tokens/snapshots/integration__routes__me__tokens__create__create_token_with_trusted_publishing_scope-3.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: New API token "trusted-publishing-token" created
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new API token with the name "trusted-publishing-token" was recently added to your crates.io account.

If you did not create this token, you should revoke it immediately: https://crates.io/settings/tokens.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>A new API token with the name "<strong>trusted-publishing-token</strong>" was recently added to your crates.io account.</p>

<p>If you did not create this token, you should revoke it immediately: <a href="https://crates.io/settings/tokens">https://crates.io/settings/tokens</a>.</p>

<p>--<br>The crates.io Team</p>
--[boundary]--
